yaml-definitions/affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: affinity
  name: affinity
spec:
  containers:
  - image: nginx
    name: affinity
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                  - linux
      preferredDuringSchedulingIgnoredDuringExecution:
        - preference:
            matchExpressions:
              - key: disktyp
                operator: In
                values:
                  - ssd
          weight: 1
