yaml-definitions/init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: init
  name: init
spec:
  containers:
  - command:
    - sh
    - -c
    - echo The app is running! && sleep 3600
    image: busybox:1.35
    name: init
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
