yaml-definitions/nfs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsvp-db1
spec:
  replicas: 2
  selector:
    matchLabels:
      appdb: rsvpdb
  template:
    metadata:
      labels:
        appdb: rsvpdb
    spec:
      volumes:
        - name: voldb1
          persistentVolumeClaim:
            claimName: nfs-claim
      containers:
        - name: rsvpd-db1
          image: teamcloudyuga/mongo:3.3
          volumeMounts:
            - name: voldb1
              mountPath: /data/db
          ports:
            - containerPort: 27017
