yaml-definitions/nginx-cka-worker.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-cka-worker
  name: nginx-cka-worker
spec:
  nodeName: cka-worker
  containers:
  - image: nginx
    name: nginx-cka-worker
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
