yaml-definitions/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: redis-init
  name: redis-init
spec:
  containers:
  - command:
    - redis-server
    - /redis-master/redis.conf
    image: redis:7
    name: redis-init
    ports:
    - containerPort: 6379
    resources: {}
    volumeMounts:
      - mountPath: /redis-master-data
        name: data
      - mountPath: /redis-master
        name: config
  volumes:
    - name: data
      emptyDir: { }
    - name: config
      configMap:
        name: redis-config
        items:
          - key: redis-config
            path: redis.conf
  dnsPolicy: ClusterFirst
  restartPolicy: Always
