yaml-definitions/secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secret-env
  name: secret-env
spec:
  containers:
  - command:
    - sh
    - -c
    - printenv DEV_USER DEV_PASS; sleep 8200
    image: busybox
    name: secret-env
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
