yaml-definitions/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secret-pod
  name: secret-pod
spec:
  containers:
  - command:
    - sh
    - -c
    - echo The app is running! && sleep 3600
    image: busybox
    name: secret-pod
    resources: {}
    volumeMounts:
      - name: secret-vol
        readOnly: true
        mountPath: /etc/secret-vol
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: secret-vol
      secret:
        secretName: dev-login
