yaml-definitions/sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sidecar
  name: sidecar
spec:
  containers:
  - command:
    - sh
    - -c
    - while true; do cat /var/log/nginx/error.log; sleep 20; done
    image: busybox
    name: sidecar
    resources: {}
    volumeMounts:
      - name: log-vol
        mountPath: /var/log/nginx
  - name: nginx
    image: nginx
    volumeMounts:
      - name: log-vol
        mountPath: /var/log/nginx
  volumes:
    - name: log-vol
      emptyDir: { }
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
