yaml-definitions/ssd-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: ssd-pod
  name: ssd-pod
spec:
  nodeSelector:
    disktype: ssd
  containers:
  - image: nginx
    name: ssd-pod
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
